2005/07/27	kaffeetisch

	* Glib.pm, META.yml, NEWS, README: Unstable release 1.093.

2005/07/26	muppetman

	* CodeGen.pm, Makefile.PL, MANIFEST: Take out the Gtk2-specific
	portions of Gtk2::CodeGen, make it extensible, and call it
	Glib::CodeGen.

2005/07/12	kaffeetisch

	* Glib.pm, META.yml, NEWS, README: Unstable release 1.092.

2005/07/05	kaffeetisch

	* GUtils.xs, t/1.t: Bind and test g_markup_escape_text.

2005/07/02 00:32 pcg

	* GMainLoop.xs (add_watch): on native win32, convert the perl fileno
	to a winsock fileno using win32_get_osfhandle and call
	g_io_channel_win32_new_socket directly.
	* Subclass.pm: fix my contact address while we are at it.

2005/06/28	kaffeetisch

	* GenPod.pm (podify_ancestors): Use one less space for the
	indention of ancestors to make them line up correctly.

2005/06/22	kaffeetisch

	* t/c.t: Use is() instead of is_deeply() to test flags values
	since the latter was changed to always use the string version of
	overloaded objects in recent versions of Test::More, whereas the
	former seems to work correctly.  Tested with Test::More 0.45 and
	0.60.

2005/06/20	kaffeetisch

	* xs/GLog.xs (gperl_log_handler): Set perl's context to the one
	gperl_handle_logs_for() was called in.  This is to make sure
	Perl_form accesses a valid memory pool, which prevents segfaults
	when the log handler is called from a different thread.

	* GType.xs: Fix a typo in gperl_package_from_type's POD.

2005/06/06	kaffeetisch

	* Glib.pm, MANIFEST, META.yml, NEWS, README: Unstable release
	1.091.

2005/05/30	kaffeetisch

	* GKeyFile.xs: Fix the g_key_file_get_keys XSUB to actually return
	anything, and make it omit NULLs.  Fix an incorrect offset in the
	g_key_file_set_locale_string_list XSUB.  Replace "const gchar
	const **" with "const gchar * const *" where appropriate.

	* GObject.xs (Glib::Object::set_threadsafe): Mark `threadsafe' as
	unused in the !GPERL_THREAD_SAFE branch.

	* typemap: Add a GSignalFlags typemap.  The corresponding